ThemeEnginePlugin [ refs #11455 , closes #11528 ] : Initial i18n and l10n . Deal with absolute paths in theme info (htdocs , templates, ...)
git-svn-id: http://trac-hacks.org/svn@13619 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/themeengineplugin/trunk/MANIFEST.in
+++ b/themeengineplugin/trunk/MANIFEST.in
@@ -2,5 +2,7 @@
 include COPYING README
 graft themeengine/templates
 graft themeengine/htdocs
+graft themeengine/locale
 graft themeengine/tests
-global-exclude *.pyc *.swp *.swo
+global-exclude *.pyc *.swp *.swo *.mo
+
