--- a/themeengineplugin/trunk/setup.cfg
+++ b/themeengineplugin/trunk/setup.cfg
@@ -8,3 +8,24 @@ tag_svn_revision = true
 [sdist]
 formats = gztar,bztar,ztar,tar,zip
 
+[extract_messages]
+add_comments = TRANSLATOR: 
+msgid_bugs_address = olemis+trac@gmail.com
+output_file = themeengine/locale/messages.pot
+keywords = _ ngettext:1,2 N_ tag_ tagn_:1,2 Option:4 BoolOption:4 IntOption:4 ListOption:6 ExtensionOption:5 PathOption:4
+no-wrap = true
+
+[init_catalog]
+input_file = themeengine/locale/messages.pot
+output_dir = themeengine/locale
+domain = themeengine
+
+[compile_catalog]
+directory = themeengine/locale
+domain = themeengine
+
+[update_catalog]
+input_file = themeengine/locale/messages.pot
+output_dir = themeengine/locale
+domain = themeengine
+
