--- a/tracticketchangelogplugin/0.12/setup.cfg
+++ b/tracticketchangelogplugin/0.12/setup.cfg
@@ -1,3 +1,7 @@
+[egg_info]
+tag_build = dev
+tag_svn_revision = true
+
 [extract_messages]
 add_comments = TRANSLATOR:
 msgid_bugs_address = richard.liao.i@gmmail.com
