TracTicketReferencePlugin: make compatible with Trac 1.6 (closes #14274)
git-svn-id: https://trac-hacks.org/svn@18616 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracticketreferenceplugin/1.0/setup.cfg
+++ b/tracticketreferenceplugin/1.0/setup.cfg
@@ -1,6 +1,14 @@
+; pytest~=3.0 for Python 2
 [pytest]
 addopts = --capture=no --pep8
 pep8ignore = E126 E302 E701
+
+; pytest>=4 for Python 3
+[tool:pytest]
+addopts = --capture=no --pycodestyle
+
+[pycodestyle]
+ignore = E126,E302,E701
 
 [extract_messages]
 add_comments = TRANSLATOR: Tetsuya Morimoto
