TracTicketReferencePlugin: modify Python in the classifiers with 2.7 and 3, and enable `[bdist_wheel] universal` option (refs #14274)
git-svn-id: https://trac-hacks.org/svn@18617 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracticketreferenceplugin/1.0/setup.cfg
+++ b/tracticketreferenceplugin/1.0/setup.cfg
@@ -10,6 +10,9 @@ addopts = --capture=no --pycodestyle
 [pycodestyle]
 ignore = E126,E302,E701
 
+[bdist_wheel]
+universal = 1
+
 [extract_messages]
 add_comments = TRANSLATOR: Tetsuya Morimoto
 msgid_bugs_address = http://trac-hacks.org/wiki/TracTicketReferencePlugin
