TicketImportPlugin: follow-up to r18418, fix compatible with Trac 1.6
git-svn-id: https://trac-hacks.org/svn@18620 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/ticketimportplugin/1.0/tox.ini
+++ b/ticketimportplugin/1.0/tox.ini
@@ -1,15 +1,18 @@
 [tox]
-envlist = py27-trac{10,12,14}, py39-trac15
+envlist =
+    py27-trac{10,12,14}
+    py3{5,6,7,8,9,10,11,12}-trac16
 
 [testenv]
-passenv = PYTHONPATH
-setenv = PYTHONHASHSEED=0
-commands = python -m unittest talm_importer.test.suite
 deps =
     trac10: Trac~=1.0.0
     trac12: Trac~=1.2.0
     trac14: Trac~=1.4.0
-    trac15: https://download.edgewall.org/trac/Trac-1.5.3-py3-none-any.whl
-    jinja2<3
+    trac16: Trac~=1.6.0
     xlrd
     openpyxl
+setenv =
+    PYTHONHASHSEED = 0
+    TMP = {envtmpdir}
+commands =
+    {envpython} -Wdefault -m unittest -v talm_importer.test.suite
