ExcelDownloadPlugin: fix *.xlsx export failing with garbled surrogate characters
git-svn-id: https://trac-hacks.org/svn@18625 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/exceldownloadplugin/1.0/tox.ini
+++ b/exceldownloadplugin/1.0/tox.ini
@@ -2,14 +2,14 @@
 envlist =
     py27-trac{10,12,14}-{pyxl24,pyxl25}
     py27-trac{10,12,14}-pyxl26-xlwt
-    py{36,37,38,39,310,311,312}-trac15-pyxl{30,31}-xlwt
+    py{36,37,38,39,310,311,312}-trac16-pyxl{30,31}-xlwt
 
 [testenv]
 deps =
     trac10: Trac~=1.0.0
     trac12: Trac~=1.2.0
     trac14: Trac~=1.4.0
-    trac15: https://download.edgewall.org/trac/Trac-1.5.4.tar.gz
+    trac16: Trac~=1.6.0
     pyxl24: openpyxl~=2.4.0
     pyxl25: openpyxl~=2.5.0
     pyxl26: openpyxl~=2.6.0
