--- a/roadmapplugin/trunk/setup.cfg
+++ b/roadmapplugin/trunk/setup.cfg
@@ -1,6 +1,9 @@
 [egg_info]
 tag_build = dev
 
+[bdist_wheel]
+universal = 1
+
 [extract_messages]
 add_comments = TRANSLATOR:
 #copyright_holder = Edgewall Software
