TracAccountManager 0.6dev: allow to run tests with Python 3.12 using aiosmtpd
git-svn-id: https://trac-hacks.org/svn@18632 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/accountmanagerplugin/trunk/tox.ini
+++ b/accountmanagerplugin/trunk/tox.ini
@@ -1,14 +1,15 @@
 [tox]
 envlist =
     py27-trac{12,14}
-    py3{5,6,7,8,9,10,11}-trac16
+    py3{5,6,7,8,9,10,11,12}-trac16
 
 [testenv]
 deps =
-    py{27,35}: twill>=2,<3
-    py3{6,7,8,9,10,11,12}: twill>=2
+    twill>=2,<3; python_version<'3.6'
+    twill>=2; python_version>='3.6'
+    aiosmtpd; python_version>='3.7'
     pytidylib; os_name!="nt"
-    py27,py3{6,7,8,9,10,11}: Babel
+    Babel
     passlib
     bcrypt
     Pyrad; os_name!="nt"
