XmlRpcPlugin: make `compile_catalog` command invoked before `build` command
git-svn-id: https://trac-hacks.org/svn@18639 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/xmlrpcplugin/trunk/MANIFEST.in
+++ b/xmlrpcplugin/trunk/MANIFEST.in
@@ -3,3 +3,5 @@ include setup.cfg
 include tracrpc/htdocs/*.css
 include tracrpc/htdocs/*.js
 include tracrpc/templates/*.html
+include tracrpc/locale/*.pot
+include tracrpc/locale/*/LC_MESSAGES/*.po
